--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -213,6 +213,7 @@ header.masthead h2 {
   transition: all ease 0.5s;
   opacity: 0;
   background-color: rgba(24, 188, 156, 0.9);
+  cursor: pointer;
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
